--- a/module2_sol/index.html
+++ b/module2_sol/index.html
@@ -5,6 +5,6 @@
         </title>
     </head>
     <body>
-        Index file         
+        Index file for module 2 solution
     </body>
 </html>
