--- a/module2_sol/index.html
+++ b/module2_sol/index.html
@@ -1,10 +1,49 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
+    <head>  
+        <meta charset="utf-8">
+        <meta name="viewport" content="width = device-width, initial-scale = 1">
 
+        <link rel = "stylesheet" type = "text/css" href="css/stylesheets.css">
+        <title>
+            My Menu
         </title>
     </head>
     <body>
-        Index file for module 2 solution
+        <h1>
+            Our Menu
+        </h1>
+        <div class = "content">
+            <div class = "container col-lg-4 col-md-6 col-sm-12">
+                <section>
+                    <div id="chicken">
+                        Chicken
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </section>
+            </div>
+            <div class = "container col-lg-4 col-md-6 col-sm-12">
+                <section>
+                    <div id="beef">
+                        Beef
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </section>
+            </div>
+            <div class = "container col-lg-4 col-md-6 col-sm-12">
+                <section>
+                    <div id="sushi">
+                        Sushi
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                </section>
+            </div>
+        </div>
     </body>
 </html>
